@@ -31,7 +31,7 @@
 <!-- 		<setting type="sep" /> -->
 		<setting id="mylists.widget" type="bool" label="32329" default="true" />
 		<setting id="navi.anime" type="bool" label="40068" default="false" />
-		<setting id="navi.youtube" type="bool" label="40061" default="true" />
+		<setting id="navi.youtube" type="bool" label="40061" default="false" />
 		<setting id="navi.prem.services" type="bool" label="40060" default="true" />
 		<setting id="navi.news" type="bool" label="32013" default="true" />
 		<setting id="navi.changelog" type="bool" label="32014" default="true" />
@@ -61,7 +61,7 @@
 		<setting id="navi.movie.imdb.languages" type="bool" label="32462" default="true" />
 		<setting id="navi.movie.imdb.certificates" type="bool" label="32464" default="true" />
 		<setting type="lsep" label="32002" />
-		<setting id="navi.originals" type="bool" label="40069" default="true" />
+		<setting id="navi.originals" type="bool" label="40069" default="false" />
 		<setting id="navi.tv.imdb.popular" type="bool" label="32429" default="true" />
 		<setting id="navi.tv.tmdb.popular" type="bool" label="32431" default="true" />
 		<setting id="navi.tv.trakt.popular" type="bool" label="32433" default="true" />
