@@ -1,3 +1,5 @@
+[B][COLOR red]Update - v4.1.1 – Sept. 04, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed issue with fresh install failing with log error notice.[/I]
 [B][COLOR red]Update - v4.1.0 – Sept. 03, 2020[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Added "File Name Format" option to downloads.  You
     have the option of "Title (year) or Title S01E01", which is
